force-app/main/default/objects/TriggerExecutionControl__c/TriggerExecutionControl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Trigger Execution Control</label>
</CustomObject>