force-app/main/default/objects/TriggerExecutionControl__c/fields/RecursiveCount__c.field-meta.xml
<CustomField>
    <fullName>RecursiveCount__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Specifies total number of recursive execution.
Setting this value to 1 =&gt; Skips the recursive execution initiated because of Workflow Field Updates.</description>
    <label>Recursive Count</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>