force-app/main/default/objects/TriggerExecutionControl__c/fields/SkipTriggers__c.field-meta.xml
<CustomField>
    <fullName>SkipTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is enabled, Trigger Handler will skips the execution of the trigger regardless of the Users mentioned in Skip for Triggers.</description>
    <inlineHelpText>If this is enabled, Trigger Handler will skips the execution of the trigger regardless of the Users mentioned in Users to Skip</inlineHelpText>
    <label>Skip Triggers?</label>
    <type>Checkbox</type>
</CustomField>