force-app/main/default/objects/TriggerExecutionControl__c/fields/UsersToSkip__c.field-meta.xml
<CustomField>
    <fullName>UsersToSkip__c</fullName>
    <description>Trigger will not run for the specified User Ids. Use comma separated User Ids.
Example: 15DigitUsErID01, 15DigitUsErID02, 15DigitUsErID03</description>
    <inlineHelpText>Trigger will not run for the specified User Ids. Use comma separated User Ids.</inlineHelpText>
    <label>Users To Skip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>