force-app/main/default/objects/TriggerExecutionControl__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <columns>RecursiveCount__c</columns>
    <columns>SkipTriggers__c</columns>
    <columns>UsersToSkip__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
    <language>en_US</language>
</ListView>